# app/Http/Requests/StoreUserRequest.php
@@ -21,11 +21,12 @@ class StoreUserRequest extends FormRequest
     {
         return [
             'full_name' => 'required|string|max:255',
-            'email' => 'required|email|unique:users,email',
-            'document' => 'required|string|unique:users,document', // Validação de unicidade do CPF ou CNPJ
+            'email' => 'required|string|email|max:255|unique:users',
+            'document' => 'required|string|max:20|unique:users',
             'password' => 'required|string|min:8|confirmed',
-            'type' => 'required|in:common,shopkeeper',
-            'balance' => 'nullable|numeric|min:0',
+            'password_confirmation' => 'required|string|min:8',
+            'balance' => 'required|numeric',
+            'type' => 'sometimes|string',
         ];
     }
 
@@ -40,13 +41,11 @@ class StoreUserRequest extends FormRequest
             'full_name.required' => 'O nome completo é obrigatório.',
             'email.required' => 'O e-mail é obrigatório.',
             'email.email' => 'O e-mail deve ser válido.',
-            'email.unique' => 'Este CPF ou CNPJ já está cadastrado.',
+            'email.unique' => 'Este e-mail já está cadastrado.',
+            'document.unique' => 'Este CPF ou CNPJ já está cadastrado.',
             'document.required' => 'O CPF ou CNPJ é obrigatório.',
             'password.required' => 'A senha é obrigatória.',
             'password.min' => 'A senha deve ter pelo menos 8 caracteres.',
-            'password.confirmed' => 'A confirmação da senha não corresponde.',
-            'type.required' => 'O tipo de usuário é obrigatório.',
-            'type.in' => 'O tipo de usuário deve ser "common" ou "shopkeeper".',
             'balance.numeric' => 'O saldo deve ser um número.',
             'balance.min' => 'O saldo não pode ser negativo.',
         ];
@@ -65,21 +64,23 @@ class StoreUserRequest extends FormRequest
     public function withValidator($validator): void
     {
         $validator->after(function ($validator) {
-            $document = '';
-            if ($this->has('document')) {
-                $docValue = $this->input('document');
-                $document = is_scalar($docValue) ? strval($docValue) : '';
+            $document = $this->input('document', '');
+            $document = preg_replace('/\D/', '', $document); // Remove caracteres não numéricos
+
+            $isCpfValid = User::isValidCpf($document);
+            $isCnpjValid = User::isValidCnpj($document);
+
+            if (! $isCpfValid && ! $isCnpjValid) {
+                $validator->errors()->add('document', 'Documento inválido.');
+
+                return;
             }
 
-            $type = $this->input('type');
+            // Define o tipo automaticamente com base no documento
+            $type = $isCpfValid ? 'common' : 'shopkeeper';
 
-            if ($type === 'common' && ! User::isValidCpf($document)) {
-                $validator->errors()->add('document', 'CPF inválido.');
-            }
-
-            if ($type === 'shopkeeper' && ! User::isValidCnpj($document)) {
-                $validator->errors()->add('document', 'CNPJ inválido.');
-            }
+            // Adiciona o tipo aos dados da requisição
+            $this->merge(['type' => $type]);
         });
     }
 }
